testsuite/poke.pkl/deftype-diag.pkl
/* { dg-do compile } */

deftype at3 = int[2 + 1]; /* { dg-error "" } */

